--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2016.12.17, v1.1.2
+
+feature:
+- (package) mkdirp: dependencies -> devDependencies
+- (package) buble v0.15.1
+- (package) nyc v10.0.0
+
+
 2016.11.23, v1.1.1
 
 feature:
