--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2018.05.03, v2.0.0
+
+feature:
+- (zames) increased arguments count to 8
+- (zames) rm browserify
+- (package) redrun v6.0.0
+- (package) buble v0.19.2
+- (package) browserify v16.0.0
+
+
 2018.01.31, v1.1.3
 
 feature:
