--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2018.10.10, v2.0.1
+
+feature:
+- (package) currify v3.0.0
+- (package) nyc v13.0.1
+- (package) eslint v5.6.0
+- (package) babel v7.0.0
+- (package) redrun v7.0.0
+- (package) nyc v12.0.2
+
+
 2018.05.03, v2.0.0
 
 feature:
